--- a/Currenz/Workflows/Exchange/CurrencyExchange.storyboard
+++ b/Currenz/Workflows/Exchange/CurrencyExchange.storyboard
@@ -36,7 +36,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zh0-Gb-wv2">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zh0-Gb-wv2" customClass="CurrencyExchangeView" customModule="Currenz" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="64" width="375" height="224"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -52,6 +52,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Utk-aQ-KrO"/>
+                    <connections>
+                        <outlet property="currencyExchangeView" destination="zh0-Gb-wv2" id="jcH-gS-yYh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WZT-xa-hid" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
