--- a/Currenz/Workflows/Exchange/CurrencyExchange.storyboard
+++ b/Currenz/Workflows/Exchange/CurrencyExchange.storyboard
@@ -11,13 +11,13 @@
         <!--Currency Exchange Navigation Controller-->
         <scene sceneID="Cyo-fO-fUB">
             <objects>
-                <navigationController id="8Sp-eU-8qB" customClass="CurrencyExchangeNavigationController" customModule="Currenz" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="CurrencyExchangeNavigationController" id="8Sp-eU-8qB" customClass="CurrencyExchangeNavigationController" customModule="Currenz" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="pTd-3i-5vu">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="rzS-42-m2K" kind="relationship" relationship="rootViewController" id="Gob-6K-LrP"/>
+                        <segue destination="rzS-42-m2K" kind="relationship" relationship="rootViewController" id="XVp-hm-Kih"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sDR-0E-Crq" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -51,9 +51,12 @@
                             <constraint firstItem="zh0-Gb-wv2" firstAttribute="leading" secondItem="vCj-k6-ama" secondAttribute="leading" id="jFv-Ds-d2h"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="Utk-aQ-KrO"/>
+                    <navigationItem key="navigationItem" id="Utk-aQ-KrO">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="round-swap-horizontal-circle" landscapeImage="round-swap-horizontal-circle" style="plain" id="xfW-bm-r4F"/>
+                    </navigationItem>
                     <connections>
-                        <outlet property="currencyExchangeView" destination="zh0-Gb-wv2" id="jcH-gS-yYh"/>
+                        <outlet property="changeRatesButton" destination="xfW-bm-r4F" id="hG5-Fj-C3G"/>
+                        <outlet property="currencyExchangeView" destination="zh0-Gb-wv2" id="E8D-Bl-bxz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WZT-xa-hid" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -61,4 +64,7 @@
             <point key="canvasLocation" x="376.80000000000001" y="212.74362818590706"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="round-swap-horizontal-circle" width="18" height="18"/>
+    </resources>
 </document>
