--- a/Currenz/Workflows/Exchange/CurrencyView/CurrencyView.xib
+++ b/Currenz/Workflows/Exchange/CurrencyView/CurrencyView.xib
@@ -11,8 +11,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CurrencyView" customModule="Currenz" customModuleProvider="target">
             <connections>
-                <outlet property="currencyCodeLabel" destination="I1M-y2-0jU" id="uWS-Gg-UXn"/>
-                <outlet property="currencyValueTextField" destination="P6k-5j-BPV" id="Jvz-YG-vi6"/>
+                <outlet property="currencyCodeLabel" destination="pC8-Eo-zhN" id="y5O-PQ-Ow6"/>
+                <outlet property="currencyInfoStackView" destination="V9A-xC-F4C" id="D7N-rr-YBd"/>
+                <outlet property="currencyNameLabel" destination="bqN-UK-Atq" id="N6f-x5-7EX"/>
+                <outlet property="currencyValueTextField" destination="Dhw-4e-mai" id="Lau-6n-d7W"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -20,28 +22,57 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="344"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="USD" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I1M-y2-0jU">
-                    <rect key="frame" x="10" y="162" width="35" height="20.5"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0.00" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P6k-5j-BPV" customClass="CurrencyTextField" customModule="Currenz" customModuleProvider="target">
-                    <rect key="frame" x="332" y="163.5" width="33" height="17"/>
-                    <nil key="textColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="decimalPad"/>
-                </textField>
+                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hNw-ok-Q8T">
+                    <rect key="frame" x="10" y="10" width="355" height="324"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="V9A-xC-F4C">
+                            <rect key="frame" x="0.0" y="0.0" width="177.5" height="324"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pC8-Eo-zhN">
+                                    <rect key="frame" x="0.0" y="0.0" width="43" height="157"/>
+                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bqN-UK-Atq">
+                                    <rect key="frame" x="0.0" y="167" width="35.5" height="157"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                        </stackView>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GIB-pa-wEH">
+                            <rect key="frame" x="177.5" y="0.0" width="177.5" height="324"/>
+                            <subviews>
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Dhw-4e-mai" customClass="CurrencyTextField" customModule="Currenz" customModuleProvider="target">
+                                    <rect key="frame" x="161" y="150" width="16.5" height="24"/>
+                                    <nil key="textColor"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                    <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                </textField>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="Dhw-4e-mai" firstAttribute="top" relation="greaterThanOrEqual" secondItem="GIB-pa-wEH" secondAttribute="top" id="E3h-yn-3ab"/>
+                                <constraint firstAttribute="trailing" secondItem="Dhw-4e-mai" secondAttribute="trailing" id="Nby-Nv-ph0"/>
+                                <constraint firstItem="Dhw-4e-mai" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="GIB-pa-wEH" secondAttribute="leading" id="VcY-3U-3nI"/>
+                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Dhw-4e-mai" secondAttribute="bottom" id="W9h-zl-s5P"/>
+                                <constraint firstItem="Dhw-4e-mai" firstAttribute="centerY" secondItem="GIB-pa-wEH" secondAttribute="centerY" id="lbe-aX-V2x"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="GIB-pa-wEH" firstAttribute="width" secondItem="V9A-xC-F4C" secondAttribute="width" id="hz5-ks-B55"/>
+                    </constraints>
+                </stackView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="P6k-5j-BPV" firstAttribute="top" relation="greaterThanOrEqual" secondItem="vUN-kp-3ea" secondAttribute="top" constant="10" id="BlI-m3-d8d"/>
-                <constraint firstItem="P6k-5j-BPV" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="I1M-y2-0jU" secondAttribute="trailing" constant="10" id="NET-f1-ywX"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="P6k-5j-BPV" secondAttribute="bottom" constant="10" id="idF-Bv-GEp"/>
-                <constraint firstItem="P6k-5j-BPV" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="o3L-8a-adj"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="P6k-5j-BPV" secondAttribute="trailing" constant="10" id="pSf-Z8-JSV"/>
-                <constraint firstItem="I1M-y2-0jU" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="ua3-8A-bd3"/>
-                <constraint firstItem="P6k-5j-BPV" firstAttribute="centerY" secondItem="I1M-y2-0jU" secondAttribute="centerY" id="xVH-MX-lLm"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="hNw-ok-Q8T" secondAttribute="trailing" constant="10" id="Nwt-ay-6mz"/>
+                <constraint firstItem="hNw-ok-Q8T" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="10" id="VWy-8n-sKM"/>
+                <constraint firstItem="hNw-ok-Q8T" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="b2i-6J-u4y"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="hNw-ok-Q8T" secondAttribute="bottom" constant="10" id="xx8-ha-dlC"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
