--- a/Currenz/Workflows/Exchange/CurrencyView/CurrencyView.xib
+++ b/Currenz/Workflows/Exchange/CurrencyView/CurrencyView.xib
@@ -45,7 +45,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GIB-pa-wEH">
                             <rect key="frame" x="177.5" y="0.0" width="177.5" height="324"/>
                             <subviews>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Dhw-4e-mai" customClass="CurrencyTextField" customModule="Currenz" customModuleProvider="target">
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0" textAlignment="right" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Dhw-4e-mai" customClass="CurrencyTextField" customModule="Currenz" customModuleProvider="target">
                                     <rect key="frame" x="161" y="150" width="16.5" height="24"/>
                                     <nil key="textColor"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
