--- a/Currenz/Workflows/Exchange/ExchangeView/CurrencyExchangeView.xib
+++ b/Currenz/Workflows/Exchange/ExchangeView/CurrencyExchangeView.xib
@@ -31,7 +31,7 @@
                             <rect key="frame" x="0.0" y="172.5" width="375" height="50"/>
                             <color key="backgroundColor" name="keyboardFocusIndicatorColor" catalog="System" colorSpace="catalog"/>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bBi-4f-exY" customClass="CurrencyView" customModule="Currenz" customModuleProvider="target">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bBi-4f-exY" customClass="PassiveCurrencyView" customModule="Currenz" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="222.5" width="375" height="172.5"/>
                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
