--- a/Currenz/Workflows/Exchange/ExchangeView/CurrencyExchangeView.xib
+++ b/Currenz/Workflows/Exchange/ExchangeView/CurrencyExchangeView.xib
@@ -12,6 +12,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CurrencyExchangeView" customModule="Currenz" customModuleProvider="target">
             <connections>
                 <outlet property="fromCurrencyView" destination="T8N-sA-dX1" id="BdJ-U3-rqh"/>
+                <outlet property="swapView" destination="dpy-gz-bKD" id="8Mc-Fe-Ibu"/>
                 <outlet property="toCurrencyView" destination="bBi-4f-exY" id="MZP-mn-hHa"/>
             </connections>
         </placeholder>
@@ -20,19 +21,22 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="395"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="7Ec-tG-S4j">
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="7Ec-tG-S4j">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="395"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T8N-sA-dX1" customClass="CurrencyView" customModule="Currenz" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="172.5"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="184.5"/>
                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dpy-gz-bKD">
-                            <rect key="frame" x="0.0" y="172.5" width="375" height="50"/>
-                            <color key="backgroundColor" name="keyboardFocusIndicatorColor" catalog="System" colorSpace="catalog"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dpy-gz-bKD" customClass="SwapView" customModule="Currenz" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="184.5" width="375" height="26"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="26" id="nWB-xj-smm"/>
+                            </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bBi-4f-exY" customClass="PassiveCurrencyView" customModule="Currenz" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="222.5" width="375" height="172.5"/>
+                            <rect key="frame" x="0.0" y="210.5" width="375" height="184.5"/>
                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
                     </subviews>
